--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -66,7 +66,7 @@ body {
     display: block;
 
 }
-.test{
+/* .test{
     border-radius: 10px;
     position: absolute;
     top:0;
@@ -75,7 +75,7 @@ body {
     background-color: black;
     opacity: .2;
     z-index: 1;
-}
+} */
 
 h1 {
     position: absolute;
