--- a/frontend/css/village.css
+++ b/frontend/css/village.css
@@ -92,9 +92,7 @@ a {
     font-size: 2em;
 }
 
-#suna{
-    color:var(--cream);
-}
+
 
 #kumo{
     color:var(--emeraldEntrance);
@@ -104,9 +102,7 @@ a {
     color:var(--kaki);
 }
 
-#suna:visited{
-    color:var(--cream);
-}
+
 
 #kumo:visited {
     color:var(--emeraldEntrance);
@@ -114,10 +110,25 @@ a {
 
 #konoha:visited{
     color:var(--kaki);
-} 
+}
+
+#suna{
+    color:#ead80b;
+}
+
+#suna:visited{
+    color:#ead80b;
+}
+#create {
+    color: #1291e5;
+}
+
+#create:visited{
+    color: #1291e5;
+}
 nav{
     display: flex;
-    gap:15em;
+    gap:9em;
     justify-content: center;
     font-size: 2em;
     line-height: 70px;
